--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,7 @@
 <header>
   <h1>{{ title }}</h1>
   <app-button 
+    *ngIf="hasRoute('/')"
     (btnClick)="toggleAddTask()" 
     color="{{ showAddTask ? 'red' : 'darkgreen' }}" 
     text="{{ showAddTask ? 'Close' : 'Add' }}">
